After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793698 - sysprof 3.27.91 fails to build for i586
sysprof 3.27.91 fails to build for i586
Status: RESOLVED FIXED
Product: sysprof
Classification: Other
Component: general
3.27.x
Other Linux
: Normal normal
: ---
Assigned To: Sysprof maintainer(s)
Sysprof maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-02-21 17:19 UTC by Dominique Leuenberger
Modified: 2018-02-21 19:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sysprofd: remove lingering debug code (786 bytes, patch)
2018-02-21 19:51 UTC, Christian Hergert
committed Details | Review

Description Dominique Leuenberger 2018-02-21 17:19:01 UTC
Just updated sysprof packages for openSUSE - and detected a build fail on i586:

'daemon/sysprofd@exe/sysprofd.c.o.d' -o 'daemon/sysprofd@exe/sysprofd.c.o' -c ../daemon/sysprofd.c
[  143s] ../daemon/sysprofd.c: In function ‘sysprofd_get_kernel_symbols’:
[  143s] ../daemon/sysprofd.c:97:21: error: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 3 has type ‘guint64 {aka long long unsigned int}’ [-Werror=format=]
[  143s]      g_print ("%s: %lu\n", name, addr);
[  143s]                    ~~^
[  143s]                    %llu
[  143s] ../daemon/sysprofd.c: At top level:
Comment 1 Christian Hergert 2018-02-21 19:51:08 UTC
Created attachment 368729 [details] [review]
sysprofd: remove lingering debug code
Comment 2 Christian Hergert 2018-02-21 19:51:33 UTC
Thanks for letting me know, that should have been removed...

Attachment 368729 [details] pushed as d31b4bc - sysprofd: remove lingering debug code