sysprofd: remove lingering debug code

https://bugzilla.gnome.org/show_bug.cgi?id=793698